@@ -17,7 +17,7 @@ WriteMakefile(
         'MooseX::StrictConstructor'  => '0',
         'MooseX::Types::Path::Class' => '0',
         'Net::Amazon::S3'            => '0.50',
-        'Net::Mosso::CloudFiles'     => '0.35',
+        'Net::Mosso::CloudFiles'     => '0.40',
         'Net::OpenSSH'               => '0.30',
         'Path::Class'                => '0',
         'Term::ProgressBar::Simple'  => '0.03',
